Fix homepage & white space

--- a/style.css
+++ b/style.css
@@ -13,9 +13,7 @@ html {
 
 header {
   top: 0;
-  position: fixed;
-  width: 100%;
-  z-index: 1000;
+    z-index: 1000;
 }
 
 .nav-bar {
@@ -46,6 +44,7 @@ header {
 body {
   overflow-x: hidden;
 }
+
 .nav-logo {
   flex: 1 0 0;
 }
@@ -200,7 +199,6 @@ input[type="search"] {
 }
 
 .home-text p {
-  width: 32.5em;
   text-align: center;
   line-height: 1.5em;
   font-size: 1em;
@@ -323,7 +321,7 @@ input[type="search"] {
 .t-1 p,
 .t-2 p,
 .t-3 p {
-  width: 29em;
+  
   height: auto; /* Adjust height to auto */
   line-height: 1.5em;
   font-family: "Shanti", serif;
@@ -742,14 +740,14 @@ body3 h1 {
 
 .tour-page {
   display: flex;
-  padding: 80px 250px;
   justify-content: center;
   align-items: center;
   gap: 150px;
-  width: 100%;
 }
 
+
 .tour-date {
+  padding-right: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -826,14 +824,15 @@ body3 h1 {
 }
 
 .event {
+
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
 .sub-event {
+  padding-right: 10x;
   display: flex;
-  width: 500px;
-  gap: 16px;
+    gap: 16px;
 }
 .sub-event .details {
   width: 276px;
@@ -1210,6 +1209,18 @@ button:hover {
     padding: 2em;
     border: 1em solid #556086;
   }
+  .t-1 p,
+  .t-2 p,
+  .t-3 p {
+    height: auto; /* Adjust height to auto */
+    line-height: 1.5em;
+    font-family: "Shanti", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1em;
+    color: white;
+  }
+  
   main {
     width: 100%;
   }
@@ -1225,6 +1236,7 @@ button:hover {
     height: auto;
     padding: 2em;
     margin-top: 1.5em;
+    max-width: 100%;
   }
 
   .collection h1 {
@@ -1267,18 +1279,7 @@ button:hover {
     padding: 25px 50px;
     margin-left: 70px;
   }
-  .input-sub {
-    padding-top: 20px;
-  }
-  .home-text h1 {
-    width: 400px;
-    padding-bottom: 20px;
-    font-size: 32px;
-  }
-  .home-text {
-    display: flex;
-    gap: 10px;
-  }
+
   .tour-page {
     display: flex;
     flex-direction: column;
@@ -1534,7 +1535,6 @@ button:hover {
   .tour-page {
     display: flex;
     flex-direction: column;
-    padding-right: 150px;
     justify-content: center;
   }
   .tour-date p {
@@ -1629,7 +1629,6 @@ button:hover {
   .tour-page {
     display: flex;
     flex-direction: column;
-    padding-right: 150px;
     justify-content: center;
   }
   .tour-date p {
@@ -1639,51 +1638,21 @@ button:hover {
     padding: 40px;
     margin-right: 70px;
   }
+ 
   .sub-event {
     display: flex;
     flex-direction: column;
-    width: 150px;
     padding-right: 30px;
-    margin-right: 130px;
-    gap: 20px;
-  }
-  .status {
-    margin-right: 50px;
-    display: flex;
-    justify-content: center;
-    padding-left: 20px;
-    background-color: #d8000072;
-    text-align: center;
-    border-radius: 5px;
-    color: white;
-    padding: 5px;
-  }
-  .booking-temp {
-    margin-left: 30px;
-  }
-  .promote-plan {
-    margin-left: 0;
-  }
-  .icon {
-    display: flex;
-    margin-top: 10px;
-    margin-left: 50px;
+    
   }
   .sub-event .details {
     width: 200px;
   }
   .tour-date {
-    width: 300px;
-    padding: 5px;
-    padding-left: 85px;
+        padding: 5px;
+    padding-right: 5px;
   }
-  .event {
-    padding-left: 110px;
-  }
-  .tour-page {
-    width: 150px;
-    padding-right: 20px;
-  }
+  
   .container {
     margin-left: 1em;
     margin-right: 1em;
@@ -1780,33 +1749,34 @@ button:hover {
   }
 }
 
-@media (max-width: 360px) {
-  body {
+@media (max-width:360px){
+  body{
     overflow-x: hidden;
   }
-  .ticket {
-    width: 100%;
-  }
-  .tour-page {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 150px;
-    width: 100%;
-    padding-left: 200px;
-  }
-  .tour-date {
-    display: flex;
-  }
-  .tour-date h1,
-  p {
-    font-size: 1.5em;
-    justify-content: flex-start;
-  }
+ .ticket{
+  width: 100%;
+ }
+ .tour-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
+  width: 100%;
+  padding-left: 200px;
 }
-@media (max-width: 440px) {
-  .promote {
+ .tour-date{
+  display: flex;
+ }
+ .tour-date h1,p{
+  font-size: 1.5em;
+  justify-content: flex-start;
+ }
+
+
+}
+@media (max-width:440px){
+  .promote{
     transform: translateX(-50px);
   }
   .tour-page {
